--- a/imports/ui/components/person/person-show-work.html
+++ b/imports/ui/components/person/person-show-work.html
@@ -73,7 +73,7 @@
               <button class='js-create-worker-rel btn btn-xs btn-default'>{{_ "Create another position"}}</button>
               
           {{else}} <!-- //positionCountGreaterThan -->
-            <h4>{{_ "Complete your job profile!"}}</h4>
+            <h4>{{_ "Complete your job profile"}}</h4>
             <button class='js-create-worker-rel btn btn-xs btn-primary'>{{_ "Create a position"}}</button>
             
           {{/if}}
