--- a/imports/ui/components/rel/validate-worker-rels.html
+++ b/imports/ui/components/rel/validate-worker-rels.html
@@ -1,7 +1,6 @@
 <template name="ValidateWorkerRels">
     
-    <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
-      {{#panel title=(_ "Validate jobs") bodyClass="list"}}
+      {{#panel title=(_ "Validate jobs") bodyClass="list" built=true}}
       {{#if Template.subscriptionsReady}}
             <!--   <div class="pull-right">
                 <button class='btn btn-xs btn-default js-edit'>
@@ -47,5 +46,4 @@
         {{_ "Loading"}}
         {{/if}}
       {{/panel}}
-    </div>
 </template>
