before changing to 1.4

--- a/client/components/App/header/header.html
+++ b/client/components/App/header/header.html
@@ -47,14 +47,21 @@
         </div>
         <div id="logo" class="light-version">
         <span>
-          <a href="./">  {{appname}}</a>
+          <a href="./">  {{appname}} > 
+            {{workingFor.name}}
+          </a>    
         </span>
+    
         </div>
+      
+        
         <nav role="navigation">
             <div class="header-link hide-menu"><i class="fa fa-bars"></i></div>
             <div class="small-logo">
-                <span class="text-primary">    {{appname}}
-</span>
+                <span class="text-primary">{{appname}}</span>
+                <span class="text-muted"> > 
+                  {{workingFor.name}}
+                </span>
             </div>
 
 
